// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:lib/Command > #addArgument > should throw if argument is added after variadic argument 1`] = `
{
  "code": 1,
  "id": "kronk/argument-after-variadic",
  "message": "Cannot have argument after variadic argument",
  "additional": [],
  "cause": {
    "argument": "<...>",
    "last": "<numbers...>",
  },
}
`;

exports[`unit:lib/Command > #addArgument > should throw if required argument is added after optional 1`] = `
{
  "code": 1,
  "id": "kronk/required-argument-after-optional",
  "message": "Cannot have required argument after optional argument",
  "additional": [],
  "cause": {
    "argument": "<>",
    "last": "[artifact]",
  },
}
`;

exports[`unit:lib/Command > #addCommand > should throw on duplicate subcommand alias 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'version' already exists",
  "additional": [],
  "cause": {
    "alias": true,
    "command": "grease",
    "ref": "version",
    "subcommand": "same-alias-as-subcommand",
  },
}
`;

exports[`unit:lib/Command > #addCommand > should throw on duplicate subcommand name 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'dist-tag' already exists",
  "additional": [],
  "cause": {
    "alias": false,
    "command": "grease",
    "ref": "dist-tag",
    "subcommand": "dist-tag",
  },
}
`;

exports[`unit:lib/Command > #addCommand > should throw on invalid \`command\` name (0) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-subcommand-name",
  "message": "Invalid subcommand name",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addCommand > should throw on invalid \`command\` name (1) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-subcommand-name",
  "message": "Subcommand cannot have same name as parent command",
  "additional": [],
  "cause": {
    "command": "smallest-num",
    "subcommand": "smallest-num",
  },
}
`;

exports[`unit:lib/Command > #addCommand > should throw on invalid \`command\` name (2) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-subcommand-name",
  "message": "Subcommand cannot have same alias as parent command",
  "additional": [],
  "cause": {
    "alias": "sn",
    "aliases": [
      "sn",
    ],
    "command": "smallest-num",
    "subcommand": "same-alias-as-parent",
  },
}
`;

exports[`unit:lib/Command > #addOption > should throw on long flag conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '--max' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addOption > should throw on short flag conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '-m' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #helpCommand > should return help subcommand (0) 1`] = `null`;

exports[`unit:lib/Command > #helpCommand > should return help subcommand (1) 1`] = `
{
  "command": "help",
  "ancestors": [
    "grease",
  ],
  "args": [],
  "argumentValueSources": [],
  "argv": [],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`unit:lib/Command > #helpCommand > should return help subcommand (2) 1`] = `null`;

exports[`unit:lib/Command > #helpCommand > should return help subcommand (3) 1`] = `
{
  "command": "help",
  "ancestors": [
    null,
  ],
  "args": [],
  "argumentValueSources": [],
  "argv": [],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`unit:lib/Command > #hooks > should reinitialize hooks w/ falsy \`hooks\` and return \`this\` 1`] = `
{
  "postAction": [],
  "preAction": [],
  "preCommand": [],
}
`;

exports[`unit:lib/Command > #hooks > should return hooks record 1`] = `
{
  "postAction": [
    [Function Mock],
  ],
  "preAction": [
    [Function Mock],
  ],
  "preCommand": [
    [Function Mock],
  ],
}
`;

exports[`unit:lib/Command > #usage > should return command usage (0) 1`] = `
{
  "arguments": [
    "<number>",
  ],
  "options": "[flags...]",
  "subcommand": "[command]",
}
`;

exports[`unit:lib/Command > #usage > should return command usage (1) 1`] = `
{
  "arguments": [],
  "options": null,
  "subcommand": "[command]",
}
`;

exports[`unit:lib/Command > #usage > should return command usage (2) 1`] = `
{
  "arguments": [],
  "options": "[flags...]",
  "subcommand": "<command>",
}
`;

exports[`unit:lib/Command > #usage > should return command usage (3) 1`] = `
{
  "arguments": [],
  "options": "[flags...]",
  "subcommand": "[command]",
}
`;
